# tarcisiocpp

./: .gitignore  README.md
src/aula1/Aula/: age.cpp  grade.cpp  grades.cpp  squareRoot.cpp
src/aula1/Exercicios/: 1.cpp  2.cpp  3.cpp  4.cpp
src/aula2/Aula/: const.cpp  ref.cpp  types.cpp  vector.cpp  vector2.cpp
src/aula2/Exercicios/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
src/aula3/Aula/: compile_commands.json  main.cpp  vetor.cpp  vetor.hpp
src/aula3/Exercicios/: compile_commands.json  functions.cpp  main.cpp  student.cpp
src/aula4/Aula/src/: CMakeLists.txt  main.cpp
src/aula4/Aula/src/school/: functions.hpp
src/aula4/aula5/Aula/src/: initial_bad_code.cpp  initial_good_code.cpp
src/aula4/aula5/Exercicio/src/src/: input.txt  main.cpp
src/aula4/aula5/Exercicio/src/src/school/: CMakeLists.txt  functions.cpp  functions.hpp  student.hpp
src/aula6/Aula/: inheritance.cpp
src/aula6/Exercicio/: input.txt
src/aula6/Exercicio/src/: main.cpp
src/aula6/Exercicio/src/school/: CMakeLists.txt  calculus.cpp  calculus.hpp  course.cpp  course.hpp  datastructures.cpp  datastructures.hpp  functions.cpp  functions.hpp  student.cpp  student.hpp
src/aula7/Aula/src/: CMakeLists.txt  linked_list.hpp  main.cpp
src/aula7/Aula/src/Exercicios/src/: insertion_sort.hpp  main.cpp
src/aula7/Aula/src/extra/: function_template.cpp
src/aula7/Exercicios/src/: CMakeLists.txt  insertion_sort.hpp  main.cpp
